# MGSfM

./: CMakeLists.txt  LICENSE  README.md  demo-kitti.sh  demo.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  install-ccache.ps1  mac.yml  ubuntu.yml  windows.yml
cmake/: FindDependencies.cmake  FindGlog.cmake  FindSuiteSparse.cmake
glomap/: CMakeLists.txt  glomap.cc  mgsfm.cc
glomap/controllers/: global_mapper.cc  multi_global_mapper.cc  multi_global_mapper.h  option_manager.cc  option_manager.h  track_establishment.cc  track_establishment.h  track_retriangulation.cc
glomap/estimators/: bundle_adjustment.cc  cost_function.h  global_positioning.cc  global_rotation_averaging.cc  global_rotation_averaging.h  multi_L1_translation_averaging.cc  multi_L1_translation_averaging.h  multi_bundle_adjustment.cc  multi_bundle_adjustment.h  multi_global_position_refinement.cc  multi_global_position_refinement.h  multi_global_positioning.cc  multi_global_positioning.h  multi_global_rotation_averaging.cc  multi_global_rotation_averaging.h  relative_translation_refinement.cc  relative_translation_refinement.h  relpose_estimation.cc  relpose_estimation.h  triangulation.h
glomap/exe/: global_mapper.cc  global_mapper.h  multi_global_mapper.cc  multi_global_mapper.h
glomap/io/: colmap_converter.cc
glomap/math/: constrained_l1_solver.cc  constrained_l1_solver.h  l1_solver.h  l1_solver_vec3.h  rigid3d.cc  rigid3d.h  tree.cc  tree.h  union_find.h
glomap/processors/: reconstruction_normalizer.cc  reconstruction_normalizer.h  track_filter.cc
glomap/scene/: image_pair.h  view_graph.cc  view_graph.h
